# unnamed-idp

./: Cargo.toml  README.md  diesel.toml
migrations/2025-08-26-023031_create_hello_table/: up.sql
src/: main.rs  schema.rs
src/cli/: mod.rs
src/db/: mod.rs
src/tcp/: mod.rs
src/web/: mod.rs
