[package]
name = "unnamed-idp"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Web framework
rocket = { version = "0.5", features = ["json"] }

# Database
diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid"] }
r2d2 = "0.8"

# UUID support
uuid = { version = "1.10", features = ["v7", "serde"] }

# CBOR serialization
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }

# Threading
threadpool = "1.8"
num_cpus = "1.16"

# Utilities
env_logger = "0.11"
log = "0.4"

# For atomic operations
crossbeam = "0.8"

[dev-dependencies]
diesel_migrations = "2.2"
